--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-autoprefixer": "~0.0.6",
     "gulp-csso": "~0.2.6",
     "gulp-jshint": "~1.4.0",
+    "gulp-jscs": "~0.4.1",
     "gulp-imagemin": "~0.1.4",
     "gulp-clean": "~0.2.4",
     "gulp-uglify": "~0.2.1",
