--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
   "name": "webapp-boilerplate",
   "version": "0.0.0",
+  "config": {},
   "dependencies": {},
   "devDependencies": {
     "gulp": "~3.6.0",
     "gulp-load-plugins": "~0.5.0",
     "gulp-util": "~2.2.9",
     "gulp-autoprefixer": "~0.0.6",
+    "gulp-bower-files": "~0.2.1",
+    "gulp-cache": "~0.1.1",
+    "gulp-clean": "~0.2.4",
+    "gulp-connect": "~2.0.0",
     "gulp-csso": "~0.2.6",
+    "gulp-filter": "~0.3.1",
+    "gulp-flatten": "~0.0.2",
+    "gulp-imagemin": "~0.1.4",
     "gulp-jshint": "~1.4.0",
     "gulp-jscs": "~0.4.1",
-    "gulp-imagemin": "~0.1.4",
-    "gulp-clean": "~0.2.4",
-    "gulp-uglify": "~0.2.1",
-    "gulp-cache": "~0.1.1",
-    "gulp-ruby-sass": "~0.3.0",
+    "gulp-markdown": "~0.1.2",
+    "gulp-notify": "~1.2.5",
+    "gulp-csslint": "~0.1.3",
+    "gulp-sass": "~0.7.1",
     "gulp-size": "~0.1.2",
-    "gulp-connect": "~2.0.0",
+    "gulp-template": "~0.1.1",
+    "gulp-uglify": "~0.2.1",
     "gulp-useref": "~0.2.1",
-    "wiredep": "~1.3.0",
-    "gulp-filter": "~0.3.1",
+    "gulp-zip": "~0.3.4",
+    "multipipe": "0.0.2",
     "open": "~0.0.4",
-    "gulp-flatten": "~0.0.2",
-    "gulp-bower-files": "~0.2.1"
+    "wiredep": "~1.3.0"
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "scripts": {
+    "build": "gulp"
   }
 }
