--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "webapp-boilerplate",
+  "title": "Webapp Boilerplate",
   "version": "0.0.0",
-  "config": {},
+  "config": {
+    "development": {
+      "connect": {
+        "host": "0.0.0.0",
+        "port": 9000
+      },
+      "color": "black"
+    }
+  },
   "dependencies": {},
   "devDependencies": {
     "gulp": "~3.6.0",
@@ -11,25 +20,41 @@
     "gulp-bower-files": "~0.2.1",
     "gulp-cache": "~0.1.1",
     "gulp-clean": "~0.2.4",
+    "gulp-concat": "~2.2.0",
     "gulp-connect": "~2.0.0",
     "gulp-csslint": "~0.1.4",
     "gulp-csso": "~0.2.6",
+    "gulp-debug": "~0.3.0",
     "gulp-filter": "~0.3.1",
     "gulp-flatten": "~0.0.2",
+    "gulp-if": "~1.0.0",
     "gulp-imagemin": "~0.1.4",
+    "gulp-inject": "~0.4.1",
     "gulp-jshint": "~1.4.0",
     "gulp-jscs": "~0.4.1",
     "gulp-markdown": "~0.1.2",
     "gulp-notify": "~1.2.5",
     "gulp-sass": "~0.7.1",
     "gulp-size": "~0.1.2",
+    "gulp-svgmin": "~0.4.5",
     "gulp-template": "~0.1.1",
     "gulp-uglify": "~0.2.1",
-    "gulp-useref": "~0.2.1",
+    "gulp-wrap": "~0.3.0",
     "gulp-zip": "~0.3.4",
+    "event-stream": "~3.1.2",
+    "lazypipe": "~0.2.1",
     "multipipe": "0.0.2",
     "open": "~0.0.4",
-    "wiredep": "~1.3.0"
+    "yargs": "~1.2.1",
+    "gulp-htmlhint": "0.0.7",
+    "gulp-htmlmin": "~0.1.2",
+    "gulp-minify-html": "~0.1.3",
+    "gulp-bump": "~0.1.7",
+    "gulp-declare": "~0.2.0",
+    "gulp-jst-concat": "0.0.1",
+    "gulp-jst": "~0.1.1",
+    "combined-stream": "0.0.4",
+    "gulp-json-editor": "~2.0.2"
   },
   "engines": {
     "node": ">=0.10.0"
