--- a/.csslintrc
+++ b/.csslintrc
@@ -5,5 +5,6 @@
   "gradients": false,
   "bulletproof-font-face": false,
   "universal-selector": false,
+  "fallback-colors": false,
   "outline-none": false
 }
